# pyCoopGame

./: .gitignore  README.md  desktop.ini  setup.cfg  setup.py
notebooks/: Testing.ipynb
pyCoopGame/: Core.py  CostGap.py  Create_game.py  Nucleolus.py  Shapley.py  Validate_game.py  __init__.py
